--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ a{
 .container.three {
     background-color: #e5e7eb;
     color: #1f2937;
+    display: flex;
+    flex-direction: column;
+    padding: 50px 100px;
+
 }
 
 .quote {
@@ -124,6 +128,11 @@ a{
     font-weight: 200;
 }
 
+.speaker{
+    font-size: 24px;
+    font-weight: 900;
+    text-align: right;
+}
 
 .footer {
     background-color: #1f2937;
